2008-09-15  Dan Williams  <dcbw@redhat.com>

	* src/gconf-helpers/gconf-helpers.c
		- (nm_gconf_get_stringhash_helper, write_properties_stringhash): do not
			read or write empty values (partial fix for bgo #553465)

2008-09-22  Tambet Ingo  <tambet@gmail.com>

	* src/applet.c (make_vpn_failure_message): Handle login failure.

2008-09-15  Tambet Ingo  <tambet@gmail.com>

	* src/connection-editor/nm-connection-editor.c (populate_connection_ui): Fix
	the connection editor crashing on any change to name or autoconnect widgets.

2008-09-15  Dan Williams  <dcbw@redhat.com>

	* src/gconf-helpers/gconf-helpers.c
		- (nm_gconf_write_connection, write_one_secret_to_keyring): split out
			writing of secrets into it's own function for clarity.  Fixes a
			regression introduced in r875 where secrets wouldn't get saved.

2008-09-09  Dan Williams  <dcbw@redhat.com>

	* src/connection-editor/nm-connection-list.c
		- (remove_connection): clean up left-over VPN secrets when removing the
			connection
		- (add_connection, update_connection): save VPN secrets for user-scope
			connections

	* src/connection-editor/nm-connection-editor.c
		- (ui_to_setting, connection_editor_validate): validate and update the
			'connection' setting just like any other setting
		- (populate_connection_ui): hook up signals for notification of when
			'connection' setting properties change; connection scope needs to be
			up-to-date before any other settings are validated
		- (nm_connection_editor_save_vpn_secrets): ask the VPN page to ask the
			plugin to save its secrets

	* src/connection-editor/page-vpn.c
		- (ce_page_vpn_save_secrets): call VPN UI plugin's hook to save secrets

2008-09-05  Dan Williams  <dcbw@redhat.com>

	Fix an NMAccessPoint leak due to erroneous handling of the active AP and
	reference counts, and actually track signal strength for the active AP when
	it changes.

	* src/applet.h
		- Remove global "current_ap" since each wifi device has its own active AP
